--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CH6-fL-jVn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sRP-eo-agN">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -221,6 +221,65 @@
             </objects>
             <point key="canvasLocation" x="46" y="659"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="bu3-7p-X2P">
+            <objects>
+                <viewController id="sRP-eo-agN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="myr-5K-RfW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="B7J-EA-Yv0">
+                                <rect key="frame" x="177" y="425" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="bxO-3i-isz"/>
+                                    <constraint firstAttribute="height" constant="60" id="hws-u8-NsR"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gan-af-y4b">
+                                <rect key="frame" x="16" y="690" width="382" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="e8W-ue-7u1"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" name="YP White"/>
+                                    </backgroundConfiguration>
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Войти">
+                                            <attributes>
+                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <font key="NSFont" size="16" name="YSDisplay-Medium"/>
+                                                <font key="NSOriginalFont" size="12" name="Helvetica"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseForegroundColor" name="YP Black"/>
+                                </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dfQ-ch-N1p"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="B7J-EA-Yv0" firstAttribute="centerX" secondItem="dfQ-ch-N1p" secondAttribute="centerX" id="HKP-LV-dua"/>
+                            <constraint firstItem="Gan-af-y4b" firstAttribute="leading" secondItem="dfQ-ch-N1p" secondAttribute="leading" constant="16" id="JvF-bX-wfq"/>
+                            <constraint firstItem="dfQ-ch-N1p" firstAttribute="trailing" secondItem="Gan-af-y4b" secondAttribute="trailing" constant="16" id="WfO-1n-Ej5"/>
+                            <constraint firstItem="B7J-EA-Yv0" firstAttribute="centerY" secondItem="dfQ-ch-N1p" secondAttribute="centerY" id="gxS-oQ-guE"/>
+                            <constraint firstItem="dfQ-ch-N1p" firstAttribute="bottom" secondItem="Gan-af-y4b" secondAttribute="bottom" constant="124" id="ndB-hI-VdU"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hB7-3N-Qgc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="46" y="1358"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="UWx-Oo-bA5">
             <objects>
@@ -247,6 +306,7 @@
         <image name="0" width="200" height="132"/>
         <image name="1" width="200" height="260"/>
         <image name="LikeButtonOn" width="44" height="44"/>
+        <image name="auth_screen_logo" width="60" height="60"/>
         <image name="sharing_button" width="51" height="50"/>
         <image name="single_image_back_button" width="9" height="16"/>
         <image name="tab_editorial_active" width="30" height="30"/>
