--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -257,8 +257,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="didTapLoginButton:" destination="sRP-eo-agN" eventType="touchUpInside" id="3Xh-iV-Uol"/>
-                                    <segue destination="cMe-gY-jNI" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" id="RIe-aX-hc7"/>
+                                    <segue destination="cMe-gY-jNI" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" id="Ld5-b1-KXq"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -276,7 +275,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hB7-3N-Qgc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="46" y="1357"/>
+            <point key="canvasLocation" x="20" y="1357"/>
         </scene>
         <!--Web View View Controller-->
         <scene sceneID="CHi-ef-mbL">
@@ -317,6 +316,7 @@
                             <outlet property="webView" destination="zTp-B7-ZNq" id="9ac-X1-wko"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="Qrj-Ns-a4j"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Wt-aD-3aN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
